@@ -4,12 +4,11 @@ import com.cbit.club_connect.clubconnect.Repository.ClubRepository;
 import com.cbit.club_connect.clubconnect.Repository.EventRepository;
 import com.cbit.club_connect.clubconnect.entity.Club;
 import com.cbit.club_connect.clubconnect.entity.Event;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/public")
@@ -24,86 +23,85 @@ public class PublicController {
         this.eventRepository = eventRepository;
     }
 
-    /* ===================== Clubs ===================== */
+    @GetMapping("/ping")
+    public String ping() {
+        return "ok";
+    }
 
+    /* ---------- CLUBS ---------- */
     @GetMapping("/clubs")
-    public List<ClubDto> getClubs() {
-        return clubRepository.findAll()
+    public ResponseEntity<List<ClubDto>> getClubs() {
+        List<ClubDto> clubs = clubRepository.findAll()
                 .stream()
-                .map(this::toClubDto)
-                .collect(Collectors.toList());
+                .map(c -> new ClubDto(c.getId(), c.getName(), c.getDescription()))
+                .toList();
+        return ResponseEntity.ok(clubs);
     }
 
-    /* ===================== Events ===================== */
+    public record ClubDto(Long id, String name, String description) {}
 
-    // All upcoming events across clubs
-    @GetMapping("/events/upcoming")
-    public List<EventDto> getUpcomingEvents() {
-        return eventRepository.findByStartAtAfterOrderByStartAtAsc(LocalDateTime.now())
-                .stream()
-                .map(this::toEventDtoWithClubName)
-                .collect(Collectors.toList());
+    /* ---------- EVENTS ---------- */
+    @GetMapping("/events")
+    public ResponseEntity<List<EventDto>> getUpcomingEvents() {
+        LocalDateTime now = LocalDateTime.now();
+        System.out.println("DEBUG: Fetching events with start_at after " + now);
+
+        List<Event> events = eventRepository.findByStartAtAfterOrderByStartAtAsc(now);
+
+        if (events.isEmpty()) {
+            System.out.println("DEBUG: No upcoming events found!");
+        } else {
+            System.out.println("DEBUG: Found " + events.size() + " upcoming event(s)");
+        }
+
+        List<EventDto> result = events.stream()
+                .map(this::toEventDto)
+                .toList();
+
+        return ResponseEntity.ok(result);
     }
 
-    // Events for a specific club (upcoming by default)
-    @GetMapping("/clubs/{clubId}/events")
-    public List<EventDto> getEventsForClub(
-            @PathVariable Long clubId,
-            @RequestParam(defaultValue = "true") boolean upcomingOnly) {
-
-        List<Event> events = upcomingOnly
-                ? eventRepository.findByClubIdAndStartAtAfterOrderByStartAtAsc(clubId, LocalDateTime.now())
-                : eventRepository.findByClubIdOrderByStartAtAsc(clubId);
-
-        return events.stream()
-                .map(this::toEventDtoWithClubName)
-                .collect(Collectors.toList());
+    /* ---------- SINGLE EVENT BY ID ---------- */
+    @GetMapping("/events/{id}")
+    public ResponseEntity<EventDto> getEventById(@PathVariable Long id) {
+        return eventRepository.findById(id)
+                .map(this::toEventDto)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
-    /* ===================== DTOs ===================== */
+    /* ---------- DTO MAPPER ---------- */
+    private EventDto toEventDto(Event e) {
+        String clubName = null;
+        if (e.getClub() != null) {
+            clubName = e.getClub().getName();
+        } else if (e.getClubId() != null) {
+            Club club = clubRepository.findById(e.getClubId()).orElse(null);
+            if (club != null) clubName = club.getName();
+        }
 
-    public static class ClubDto {
-        public Long id;
-        public String name;
-        public String description;
+        return new EventDto(
+                e.getId(),
+                e.getName(),
+                e.getVenue(),
+                e.getStartAt() != null ? e.getStartAt().toString() : null,
+                clubName,
+                e.getActivityPoints(),
+                e.getDescription() // 👈 include description
+        );
     }
 
-    public static class EventDto {
-        public Long id;
-        public Long clubId;
-        public String clubName;   // resolved via ClubRepository
-        public String title;      // maps from events.name
-        public String venue;
-        public String dateTime;   // ISO string from start_at
-        public String description; // optional (null for now)
-    }
-
-    /* ===================== Mappers ===================== */
-
-    private ClubDto toClubDto(Club c) {
-        ClubDto d = new ClubDto();
-        d.id = c.getId();
-        d.name = c.getName();
-        d.description = c.getDescription(); // ensure Club has getDescription()
-        return d;
-    }
-
-    private EventDto toEventDtoWithClubName(Event e) {
-        EventDto d = new EventDto();
-        d.id = e.getId();
-        d.clubId = e.getClubId();
-        d.title = e.getTitle();             // events.name -> Event.title in entity
-        d.venue = e.getVenue();
-        d.dateTime = e.getStartAt() != null ? e.getStartAt().toString() : null;
-        d.description = null;               // set if you later add a description column
-        d.clubName = getClubNameSafe(e.getClubId());
-        return d;
-    }
-
-    private String getClubNameSafe(Long clubId) {
-        if (clubId == null) return null;
-        Optional<Club> c = clubRepository.findById(clubId);
-        return c.map(Club::getName).orElse(null);
-    }
+    /* ---------- RECORDS ---------- */
+    public record EventDto(
+            Long id,
+            String title,
+            String venue,
+            String dateTime,
+            String clubName,
+            Integer activityPoints,
+            String description // 👈 added
+    ) {}
 }
+
+
 
